# vnpy_macos

./: main.py  pyproject.toml  requirements.txt  xcy_run.md  xcy_run.py
vnpy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
vnpy/trader/ui/: mainwindow.py  widget.py
