[project]
name = "vnpy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "attrs==25.3.0",
    "bardapi==0.1.41",
    "boto3==1.35.34",
    "botocore==1.35.34",
    "brotli==1.1.0",
    "cachetools==5.5.2",
    "certifi==2023.11.17",
    "cffi==1.16.0",
    "charset-normalizer==3.3.2",
    "click==8.1.7",
    "colorama==0.4.6",
    "contourpy==1.3.0",
    "cryptography==41.0.7",
    "cycler==0.12.1",
    "deap==1.4.1",
    "deprecated==1.2.14",
    "duckdb==1.0.0",
    "einops==0.8.0",
    "encodec==0.1.1",
    "filelock==3.16.1",
    "fonttools==4.53.1",
    "fsspec==2024.9.0",
    "funcy==2.0",
    "google-ads==26.0.1",
    "google-api-core==2.24.2",
    "google-auth==2.38.0",
    "google-auth-oauthlib==1.2.1",
    "googleads==45.0.0",
    "googleapis-common-protos==1.69.2",
    "googlebard==2.1.0",
    "grpcio==1.71.0",
    "grpcio-status==1.71.0",
    "h11==0.14.0",
    "h2==4.1.0",
    "hpack==4.0.0",
    "httpcore==1.0.2",
    "httpx==0.28.1",
    "httpx-sse==0.4.0",
    "huggingface-hub==0.25.1",
    "hyperframe==6.0.1",
    "idna==3.6",
    "importlib-metadata==7.0.2",
    "isodate==0.7.2",
    "jinja2==3.1.4",
    "jmespath==1.0.1",
    "kiwisolver==1.4.5",
    "lxml==5.3.1",
    "markdown-it-py==3.0.0",
    "markupsafe==2.1.5",
    "matplotlib==3.9.2",
    "mcp==1.6.0",
    "mcp-server-time==0.6.2",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "msgpack==1.1.0rc2",
    "networkx==3.3",
    "oauthlib==3.2.2",
    "orjson==3.10.7",
    "outcome==1.3.0.post0",
    "pandas==2.2.2",
    "pillow==10.4.0",
    "platformdirs==4.3.7",
    "plotly==5.20.0",
    "prompt-toolkit==3.0.43",
    "proto-plus==1.26.1",
    "protobuf==5.29.4",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.1",
    "pycparser==2.21",
    "pydantic==2.11.3",
    "pydantic-core==2.33.1",
    "pydantic-settings==2.9.1",
    "pygithub==2.1.1",
    "pygments==2.17.2",
    "pyjwt==2.8.0",
    "pynacl==1.5.0",
    "pyparsing==3.1.4",
    "pyside6==6.7.2",
    "pyside6-addons==6.7.2",
    "pyside6-essentials==6.7.2",
    "pysocks==1.7.1",
    "python-dateutil==2.8.2",
    "python-dotenv==1.1.0",
    "python-rapidjson==1.20",
    "pytz==2024.1",
    "pyyaml==6.0.2",
    "pyzmq==25.1.2",
    "qdarkstyle==3.2.3",
    "qtpy==2.4.1",
    "regex==2024.9.11",
    "requests==2.31.0",
    "requests-file==2.1.0",
    "requests-oauthlib==2.0.0",
    "requests-toolbelt==1.0.0",
    "rich==13.7.0",
    "rsa==4.9",
    "s3transfer==0.10.2",
    "safetensors==0.4.5",
    "scipy==1.14.1",
    "seaborn==0.13.2",
    "selenium==4.30.0",
    "shiboken6==6.7.2",
    "six==1.16.0",
    "sniffio==1.3.0",
    "socksio==1.0.0",
    "sortedcontainers==2.4.0",
    "sse-starlette==2.2.1",
    "starlette==0.46.2",
    "sympy==1.13.3",
    "tenacity==9.0.0",
    "tokenizers==0.20.0",
    "torch==2.4.1",
    "torchaudio==2.4.1",
    "tqdm==4.66.5",
    "trio==0.29.0",
    "trio-websocket==0.12.2",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.0",
    "tzdata==2025.2",
    "tzlocal==5.2",
    "undetected-chromedriver==3.5.5",
    "urllib3==2.1.0",
    "uvicorn==0.34.2",
    "vnpy-duckdb==1.0.0",
    "wcwidth==0.2.12",
    "websocket-client==1.8.0",
    "websockets==15.0.1",
    "wrapt==1.16.0",
    "wsproto==1.2.0",
    "xmltodict==0.14.2",
    "vnpy-binance",
    "vnpy-ctp",
    "vnpy-evo",
    "vnpy-rest",
    "vnpy-websocket",
    "zeep==4.3.1",
    "zipp==3.20.1",
    "zstandard==0.23.0",
    "ta-lib>=0.4.0",
    "vnpy-futu",
    "vnpy_ib",
    "vnpy_ctastrategy",
    "vnpy_ctabacktester",
    "vnpy_spreadtrading",
    "vnpy_algotrading",
    "vnpy_optionmaster",
    "vnpy_portfoliostrategy",
    "vnpy_scripttrader",
    "vnpy_chartwizard",
    "vnpy_rpcservice",
    "vnpy_excelrtd",
    "vnpy_datamanager",
    "vnpy_datarecorder",
    "vnpy_riskmanager",
    "vnpy_webtrader",
    "vnpy_portfoliomanager",
    "python-ibapi-stable",
    "vnpy_sqlite",
]


[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.uv.sources]
vnpy-binance = { path = "./local_pkgs/vnpy_binance", editable = true }
vnpy-ctp = { path = "./local_pkgs/vnpy_ctp", editable = true }
vnpy-futu = { path = "./local_pkgs/vnpy_futu", editable = true }


